fix: ajustado retorno de autenticação e adicionado rota de login no swagger
